refactor combat feedback